--- a/main.css
+++ b/main.css
@@ -53,8 +53,10 @@ a:link, a:visited {
     text-decoration: none;  /* 밑줄없애기 */
     color: black;
 }
-.clock {
-    width: 10px;
-    height: 10px;
-    z-index: 1;
+
+.alarm {
+    width: 150px;
+    position: absolute;
+    right: 10px;
+    top: 30px;
 }
