--- a/main.css
+++ b/main.css
@@ -21,34 +21,54 @@
     top: 320px;
     right: 0;
 }
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1600px;
+    padding: 10px;
+}
 
 
 .actionbtn{
     width: 450px;
     height: 220px;
     background-color: #F6B157;
-    text-align: center;
-    position: absolute;
+    position:absolute;
+    top: 50%;
+    margin-left: 35%;
     border-radius: 200px;
-    top: 450px;
-    right: 420px;
     font-size: 100px;
+    transition: .5s;
 }
 .quizbtn{
     width: 450px;
     height: 220px;
+    top: 50%;
     background-color: #F6B157;
-    text-align: center;
     position: absolute;
+    margin-right: 35%;
     border-radius: 200px;
-    top: 450px;
-    left: 420px;
     font-size: 100px;
+    transition: .5s;
 }
-.quizletter, .actionletter {
+.actionbtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+.quizbtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+.quizletter {
     position: relative;
-    top:-50px;
+    top:-3rem;
+    right: -9rem;
 }
+ .actionletter {
+    position: relative;
+    top:-3rem;
+    right: -9rem;
+}
+
 a:link, a:visited {
     text-decoration: none;  /* 밑줄없애기 */
     color: black;
@@ -59,4 +79,11 @@ a:link, a:visited {
     position: absolute;
     right: 10px;
     top: 30px;
+}
+
+.question {
+    width: 90px;
+    position: absolute;
+    bottom: 2px;
+    right: -1px;
 }
