--- a/quizcategory.css
+++ b/quizcategory.css
@@ -18,6 +18,12 @@
     text-align: center;
     top: -40px;
 }
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
 
 
 .line {
@@ -33,10 +39,12 @@
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 200px;
-    top: 300px;
-    right: 1150px;
     font-size: 50px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .commonsensebtn {
@@ -45,10 +53,13 @@
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 200px;
-    top: 300px;
-    right: 390px;
     font-size: 70px;
+    right: -38rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .oxbtn {
@@ -57,10 +68,12 @@
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 200px;
-    top: 300px;
-    right: 770px;
     font-size: 70px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .nonesensebtn {
     width: 300px;
@@ -68,10 +81,12 @@
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 200px;
-    top: 550px;
-    right: 1150px;
     font-size: 70px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .flagbtn {
     width: 300px;
@@ -79,31 +94,35 @@
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
     border-radius: 200px;
-    top: 550px;
-    right: 770px;
     font-size: 70px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.snackbtn {
-    width: 300px;
-    height: 180px;
-    background-color: #F6B157;
-    text-align: center;
-    position: absolute;
-    border-radius: 200px;
-    top: 550px;
-    right: 390px;
-    font-size: 70px;
-}
 
 .title1 {
     position: relative;
-    top: -25px;
+    top: -1.4rem;
+    right: -3rem;
 }
 .title2 {
     position: relative;
-    top: -20px;
+    top: -1.5rem;
+    right: -6rem;
+}
+.title3 {
+    position: relative;
+    top: -1.5rem;
+    right: -4.5rem;
+}
+
+.title4 {
+    position: relative;
+    top: -1.2rem;
+    right: -7rem;
 }
 
 .home {
@@ -111,4 +130,9 @@
     position: absolute;
     left: 11px;
     top:20px
+}
+
+a:link, a:visited {
+    text-decoration: none;  /* 밑줄없애기 */
+    color: black;
 }
