--- a/actioncategory.css
+++ b/actioncategory.css
@@ -16,6 +16,7 @@
     position: relative;
     text-align: center;
     top: -40px;
+    
 }
 
 
@@ -31,11 +32,14 @@
     height: 180px;
     background-color: #F6B157;
     text-align: center;
-    position: absolute;
+    position:absolute; 
     border-radius: 200px;
-    top: 350px;
-    right: 1000px;
     font-size: 70px;
+    top: 35%;
+    right: 50%;
+    margin-right: 3rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .bodybtn {
@@ -43,11 +47,15 @@
     height: 180px;
     background-color: #F6B157;
     text-align: center;
-    position: absolute;
+    position:absolute; 
+    margin-left: 3rem;
     border-radius: 200px;
-    top: 350px;
-    right: 650px;
     font-size: 50px;
+    top: 35%;
+    right: 30%;
+
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .nonstopspeakbtn {
@@ -55,36 +63,57 @@
     height: 180px;
     background-color: #F6B157;
     text-align: center;
-    position: absolute;
+    position:absolute; 
     border-radius: 200px;
-    top: 580px;
-    right: 1000px;
     font-size: 50px;
+    top: 70%;
+    right: 50%;
+    margin-right: 3rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 .nonstopwritebtn{
     width: 300px;
     height: 180px;
     background-color: #F6B157;
     text-align: center;
-    position: absolute;
+    position:absolute; 
     border-radius: 200px;
-    top: 580px;
-    right: 650px;
+    top: 70%;
+    right: 30%;
+    margin-left: 3rem;
+    display: flex;
+    flex-wrap: wrap;
     font-size: 50px;
 }
 
 .title1 {
     position: relative;
-    top: -20px;
+    right: -2.5rem;
+    top: -1rem;
 }
 .title2 {
     position: relative;
-    top: -20px;
+    right: -6rem;
+    top: -1.5rem;
 }
+
+.title3 {
+    position: relative;
+    right: -5.5rem;
+    top: -1rem;
+}
+
+.title4 {
+    position: relative;
+    right: -6rem;
+    top: -1rem;
+}
+
 
 .home {
     width: 110px;
     position: absolute;
     left: 11px;
-    top:20px
+    top:20px;
 }
