--- a/actioncategory.css
+++ b/actioncategory.css
@@ -40,6 +40,7 @@
     margin-right: 3rem;
     display: flex;
     flex-wrap: wrap;
+    transition: .5s;
 }
 
 .bodybtn {
@@ -56,6 +57,7 @@
 
     display: flex;
     flex-wrap: wrap;
+    transition: .5s;
 }
 
 .nonstopspeakbtn {
@@ -69,8 +71,10 @@
     top: 68%;
     right: 50%;
     margin-right: 3rem;
+    font-size: 50px;
     display: flex;
     flex-wrap: wrap;
+    transition: .5s;
 }
 .nonstopwritebtn{
     width: 300px;
@@ -85,6 +89,7 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 50px;
+    transition: .5s;
 }
 
 .title1 {
@@ -116,4 +121,24 @@
     position: absolute;
     left: 11px;
     top:20px;
+}
+
+.oneofactionbtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+.bodybtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+
+.nonstopspeakbtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+
+.nonstopwritebtn:hover {
+    background-color: hsl(27, 100%, 50%);
+}
+
+a:link, a:visited {
+    text-decoration: none;  /* 밑줄없애기 */
+    color: black;
 }
