--- a/main_timer.css
+++ b/main_timer.css
@@ -35,7 +35,7 @@ p {
 
 p{
     position: relative;
-    margin-top: 0.7rem;
+    margin-top: 2rem;
     font-size: 3rem;
 }
 .start{
@@ -73,6 +73,7 @@ input {
     outline: none;
     text-align: center;
     font-size: 5rem;
+    margin-left: 2rem;
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button {
