--- a/main_timer.css
+++ b/main_timer.css
@@ -16,13 +16,18 @@ body {
     border-width: 0px 0px 10px 0px ;
 }
 
-p {
-    height: auto;
-    text-align: center;
-    font-size: 70px;
+.alarm {
+    position: relative;
+    left: 15rem;
+    width: 20rem;
 }
-
-.container .group {
+.time {
+    width: 50rem;
+    height: 5rem;
+    background-color:#FFD29D;
+    margin-top: 2rem;
+}
+.container {
   
     display: flex;
     flex-wrap: wrap;
@@ -30,53 +35,4 @@ p {
     max-width: 1600px;
     margin: auto;
     padding: 10px;
-}
-
-
-p{
-    position: relative;
-    margin-top: 2rem;
-    font-size: 3rem;
-}
-.start{
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-}
-.start_button {
-    width: 10rem;
-}
-.alarm {
-    position: relative;
-    margin-right: 1rem;
-    width: 12rem;
-    height: 12rem;
-    top: -2rem;
-    left: -5rem;
-}
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 1600px;
-    margin: auto;
-    padding: 10px;
-}
-input { 
-    position: relative;
-    top: -7rem;
-    left: -7rem;
-    width: 25rem;
-    height: 10rem;
-    background-color: #F3E3B9;
-    border-style: none;
-    outline: none;
-    text-align: center;
-    font-size: 5rem;
-    margin-left: 2rem;
-}
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
 }
