--- a/main.css
+++ b/main.css
@@ -80,9 +80,53 @@ a:link, a:visited {
     top: 30px;
 }
 
-.question {
-    width: 90px;
+#image {
+    width: 10rem;
     position: absolute;
     bottom: 2px;
     right: -1px;
 }
+
+
+
+/* 
+팝업내용 */
+
+.modal {
+    display: none; /* 모달 팝업 초기에는 보이지 않도록 설정 */
+    position: fixed; /* 모달 팝업 위치를 고정 */
+    z-index: 1; /* 모달 팝업을 가장 위로 위치시킴 */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* 모달 팝업 내용이 넘칠 경우 스크롤 가능하도록 설정 */
+    background-color: rgba(0, 0, 0, 0.4); /* 배경색을 검은색 반투명으로 설정 */
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    width: 80%; /* 모달의 너비를 80%로 설정 */
+    height: 80%; /* 모달의 높이를 80%로 설정 */
+    margin: 15% auto; /* 모달 팝업을 중앙에 위치시킴 */
+    padding: 20px;
+    margin-top: 2rem;
+    border: 1px solid #888;
+    width: 80%; /* 모달 팝업 너비를 80%로 설정 */
+    font-size: 2rem;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
