--- a/quizcategory.css
+++ b/quizcategory.css
@@ -18,13 +18,6 @@
     text-align: center;
     top: -40px;
 }
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-
 
 .line {
     width: 100%;
@@ -34,102 +27,96 @@
 }
 
 .fourquizbtn {
-    width: 300px;
-    height: 180px;
+    width: 22rem;
+    height: 13rem;
     background-color: #F6B157;
     text-align: center;
     position: absolute;
     top: 35%;
     left: 15%;
     border-radius: 200px;
-    font-size: 50px;
+    font-size: 3.7rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    text-align: center; /* 텍스트 가운데 정렬 */
     transition: .5s;
 }
 
 .commonsensebtn {
-    width: 300px;
-    height: 180px;
+    width: 22rem;
+    height: 13rem;
     background-color: #F6B157;
     text-align: center;
     position: absolute;
     top: 35%;
     left: 40%;
     border-radius: 200px;
-    font-size: 70px;
+    font-size: 4.4rem;
     right: -38rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    text-align: center; /* 텍스트 가운데 정렬 */
     transition: .5s;
 }
 
 .oxbtn {
-    width: 300px;
-    height: 180px;
+    width: 22rem;
+    height: 13rem;
     background-color: #F6B157;
     text-align: center;
     position: absolute;
     top: 35%;
     left: 65%;
     border-radius: 200px;
-    font-size: 70px;
+    font-size: 4.4rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    text-align: center; /* 텍스트 가운데 정렬 */
     transition: .5s;
 }
 .nonesensebtn {
-    width: 300px;
-    height: 180px;
+    width: 22rem;
+    height: 13rem;
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    margin-top: 1.5rem;
     top: 65%;
     left: 27%;
     border-radius: 200px;
-    font-size: 70px;
+    font-size: 4.4rem;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    text-align: center; /* 텍스트 가운데 정렬 */
     transition: .5s;
 }
 .flagbtn {
-    width: 300px;
-    height: 180px;
+    width: 22rem;
+    height: 13rem;
     background-color: #F6B157;
     text-align: center;
     position: absolute;
+    margin-top: 1.5rem;
     top: 65%;
     left: 53%;
     border-radius: 200px;
-    font-size: 70px;
+    font-size: 4.4rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center; /* 수평 가운데 정렬 */
+    align-items: center; /* 수직 가운데 정렬 */
+    text-align: center; /* 텍스트 가운데 정렬 */
     transition: .5s;
 }
 
-
-.title1 {
-    position: relative;
-    top: -1.4rem;
-    right: -3rem;
-}
-.title2 {
-    position: relative;
-    top: -1.5rem;
-    right: -6rem;
-}
-.title3 {
-    position: relative;
-    top: -1.5rem;
-    right: -4.5rem;
-}
-
-.title4 {
-    position: relative;
-    top: -1.2rem;
-    right: -7rem;
-}
 
 .home {
     width: 110px;
@@ -164,3 +151,4 @@ a {
     position: relative;
     z-index: 1;
 }
+
